# kasperskyTestAdvanced

./: CMakeLists.txt  README.md  scriptForTest.py
src/: Pipe.cpp  Pipe.h  pipeName.h
src/scan_service/: DirectoryScanner.cpp  DirectoryScanner.h  FileScanner.cpp  FileScanner.h  ScanReport.cpp  ScanReport.h  Suspicions.h  main.cpp
src/scan_util/: main.cpp
